[gd_scene load_steps=9 format=3 uid="uid://csty0hmue6rxn"]

[ext_resource type="Theme" uid="uid://cbiexu1n8kalx" path="res://tema/tema.tres" id="1_bni1y"]
[ext_resource type="Script" path="res://Scripts/cena_principal.gd" id="1_rdwce"]
[ext_resource type="Script" path="res://Scripts/coeficiente_restituicao.gd" id="2_30yyi"]
[ext_resource type="Script" path="res://Scripts/Bolinha1.gd" id="3_n84es"]
[ext_resource type="Texture2D" uid="uid://o78id3b1vk4u" path="res://textura_chao.jpg" id="5_geyy6"]
[ext_resource type="PackedScene" uid="uid://clgwosygnql1v" path="res://Cenas/bolinha.tscn" id="6_stjhs"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q8uvm"]
bg_color = Color(0.360784, 0.521569, 0.619608, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g5n1o"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.101961, 0.164706, 0.219608, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="margem" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Cena Principal" type="HBoxContainer" parent="."]
layout_mode = 2
theme = ExtResource("1_bni1y")
script = ExtResource("1_rdwce")

[node name="Painel de Controle" type="VBoxContainer" parent="Cena Principal"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Coeficiente" type="Panel" parent="Cena Principal/Painel de Controle"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("2_30yyi")

[node name="SliderCoeficiente" type="HSlider" parent="Cena Principal/Painel de Controle/Coeficiente" groups=["Sliders"]]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.192
anchor_right = 1.0
anchor_bottom = 0.808
offset_left = 23.0
offset_top = 0.104
offset_right = -104.0
offset_bottom = -0.104004
grow_horizontal = 2
grow_vertical = 2
max_value = 1.0
step = 0.1

[node name="Tipo Colisão" type="Label" parent="Cena Principal/Painel de Controle/Coeficiente/SliderCoeficiente"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -81.0
offset_top = -23.0
offset_right = 81.0
grow_horizontal = 2
grow_vertical = 0
text = "COLISÃO INELÁSTICA"

[node name="Titulo" type="Label" parent="Cena Principal/Painel de Controle/Coeficiente/SliderCoeficiente"]
layout_mode = 1
offset_right = 225.0
offset_bottom = 23.0
text = "COEFICENTE DE RESTITUIÇÃO"

[node name="Valor do E" type="Label" parent="Cena Principal/Painel de Controle/Coeficiente/SliderCoeficiente"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 22.0
offset_top = -11.5
offset_right = 62.0
offset_bottom = 11.5
grow_horizontal = 0
grow_vertical = 2

[node name="Bolinha1" type="Panel" parent="Cena Principal/Painel de Controle"]
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("3_n84es")

[node name="SliderMassa" type="HSlider" parent="Cena Principal/Painel de Controle/Bolinha1" groups=["Sliders"]]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.122
anchor_right = 1.007
anchor_bottom = 0.577
offset_left = 23.0
offset_top = 0.013998
offset_right = -108.018
offset_bottom = 0.098999
grow_horizontal = 2
grow_vertical = 2
min_value = 1.0
value = 1.0

[node name="Valor Massa" type="Label" parent="Cena Principal/Painel de Controle/Bolinha1/SliderMassa"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 22.0
offset_top = -11.5
offset_right = 59.0
offset_bottom = 11.5
grow_horizontal = 0
grow_vertical = 2

[node name="Massa" type="Label" parent="Cena Principal/Painel de Controle/Bolinha1/SliderMassa"]
layout_mode = 1
offset_right = 225.0
offset_bottom = 23.0
text = "MASSA"

[node name="SliderV0" type="HSlider" parent="Cena Principal/Painel de Controle/Bolinha1" groups=["Sliders"]]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.577
anchor_right = 1.0
anchor_bottom = 0.958
offset_left = 23.0
offset_top = 0.098999
offset_right = -104.0
offset_bottom = -0.0540161
grow_horizontal = 2
grow_vertical = 2
value = 50.0

[node name="Valor V0" type="Label" parent="Cena Principal/Painel de Controle/Bolinha1/SliderV0"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 30.0
offset_top = -11.5
offset_right = 70.0
offset_bottom = 11.5
grow_horizontal = 0
grow_vertical = 2

[node name="Velocidade Inicial" type="Label" parent="Cena Principal/Painel de Controle/Bolinha1/SliderV0"]
layout_mode = 1
offset_right = 225.0
offset_bottom = 23.0
text = "VELOCIDADE INICIAL"

[node name="Bolinha2" type="Panel" parent="Cena Principal/Painel de Controle"]
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("3_n84es")

[node name="SliderMassa" type="HSlider" parent="Cena Principal/Painel de Controle/Bolinha2" groups=["Sliders"]]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.121
anchor_right = 1.0
anchor_bottom = 0.579
offset_left = 23.0
offset_top = 0.105999
offset_right = -104.0
offset_bottom = 0.0939865
grow_horizontal = 2
grow_vertical = 2
min_value = 1.0
value = 1.0

[node name="Valor Massa" type="Label" parent="Cena Principal/Painel de Controle/Bolinha2/SliderMassa"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 22.0
offset_top = -11.5
offset_right = 59.0
offset_bottom = 11.5
grow_horizontal = 0
grow_vertical = 2

[node name="Massa" type="Label" parent="Cena Principal/Painel de Controle/Bolinha2/SliderMassa"]
layout_mode = 1
offset_right = 225.0
offset_bottom = 23.0
text = "MASSA"

[node name="SliderV0" type="HSlider" parent="Cena Principal/Painel de Controle/Bolinha2" groups=["Sliders"]]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.575
anchor_right = 1.007
anchor_bottom = 0.953
offset_left = 23.0
offset_top = -0.0500107
offset_right = -108.018
offset_bottom = 0.0579834
grow_horizontal = 2
grow_vertical = 2
value = 50.0

[node name="Valor V0" type="Label" parent="Cena Principal/Painel de Controle/Bolinha2/SliderV0"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 30.0
offset_top = -11.5
offset_right = 70.0
offset_bottom = 11.5
grow_horizontal = 0
grow_vertical = 2

[node name="Velocidade Inicial" type="Label" parent="Cena Principal/Painel de Controle/Bolinha2/SliderV0"]
layout_mode = 1
offset_right = 225.0
offset_bottom = 23.0
text = "VELOCIDADE INICIAL"

[node name="Ecrã" type="VBoxContainer" parent="Cena Principal"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.75

[node name="Simulador" type="Panel" parent="Cena Principal/Ecrã"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_q8uvm")

[node name="Chão" type="TextureRect" parent="Cena Principal/Ecrã/Simulador"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = -198.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("5_geyy6")
expand_mode = 3
stretch_mode = 1

[node name="Bolinha" parent="Cena Principal/Ecrã/Simulador/Chão" instance=ExtResource("6_stjhs")]
unique_name_in_owner = true

[node name="Bolinha2" parent="Cena Principal/Ecrã/Simulador/Chão" instance=ExtResource("6_stjhs")]
unique_name_in_owner = true
position = Vector2(670, -30)
modular = Color(0.552941, 0.309804, 1, 1)

[node name="Borda" type="Panel" parent="Cena Principal/Ecrã/Simulador"]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
rotation = -0.00177467
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_g5n1o")
metadata/_edit_lock_ = true

[node name="Painel de Controle" type="Panel" parent="Cena Principal/Ecrã"]
custom_minimum_size = Vector2(0, 180)
layout_mode = 2

[node name="Iniciar" type="Button" parent="Cena Principal/Ecrã/Painel de Controle"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -87.5
offset_top = -28.0
offset_right = 87.5
offset_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2
text = "INICIAR"

[node name="Reiniciar" type="Button" parent="Cena Principal/Ecrã/Painel de Controle"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -86.5
offset_top = -28.0
offset_right = 87.5
offset_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2
text = "REINICIAR"

[connection signal="value_changed" from="Cena Principal/Painel de Controle/Coeficiente/SliderCoeficiente" to="Cena Principal/Painel de Controle/Coeficiente" method="_on_value_changed"]
[connection signal="value_changed" from="Cena Principal/Painel de Controle/Bolinha1/SliderMassa" to="Cena Principal/Painel de Controle/Bolinha1" method="_on_slider_massa_value_changed"]
[connection signal="value_changed" from="Cena Principal/Painel de Controle/Bolinha1/SliderV0" to="Cena Principal/Painel de Controle/Bolinha1" method="_on_slider_v_0_value_changed"]
[connection signal="value_changed" from="Cena Principal/Painel de Controle/Bolinha2/SliderMassa" to="Cena Principal/Painel de Controle/Bolinha2" method="_on_slider_massa_value_changed"]
[connection signal="value_changed" from="Cena Principal/Painel de Controle/Bolinha2/SliderV0" to="Cena Principal/Painel de Controle/Bolinha2" method="_on_slider_v_0_value_changed"]
[connection signal="button_up" from="Cena Principal/Ecrã/Painel de Controle/Iniciar" to="Cena Principal" method="_on_iniciar"]
[connection signal="button_up" from="Cena Principal/Ecrã/Painel de Controle/Reiniciar" to="Cena Principal" method="_on_reiniciar"]
